--- a/src/main/resources/templates/auth/admin.html
+++ b/src/main/resources/templates/auth/admin.html
@@ -6,11 +6,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
     <script src="http://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script>
-        $(document).ready( function () {
-            $('#show-logs').DataTable();
-        } );
-        </script>
+    <script th:src="@{/js/dataTable.js}"></script>
 </head>
 
 <body>
